# SIH

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  alembic.ini  dev.bat  docker-compose.yml  env.example  kolam.db  package-lock.json  pyproject.toml  requirements.txt  setup.bat  setup.ps1
Finetuning/: finetune.py  graph.py
alembic/: env.py
alembic/versions/: 0001_initial_migration.py
frontend/SIH-F-main/: .env.production  .gitignore  debug-knowledge.bat  fix-case-sensitivity.js  package.json  preview-spa.bat  test-router.bat  vercel-build.sh  vercel-fix.js  vercel.json  vite.config.js
frontend/SIH-F-main/src/: App.css  App.jsx  index.css
frontend/SIH-F-main/src/components/: AiRecreate.css  Debug.jsx  Home.css  KnowledgeFixed.jsx  Navbar.js  Quiz.css  Recognize.css  SimpleKnowledge.jsx  TestKnowledge.jsx  analysis.css  analysis.jsx  analyze-button.css  features.css  home.jsx  knowledge-query.css  knowledge-query.jsx  knowledge.css  knowledge.jsx  navbar.css  navbar.jsx  quiz.jsx  quizcard.css  recognize.jsx
frontend/SIH-F-main/src/data/: mockKnowledgeData.js
frontend/SIH-F-main/src/services/: kolamService.js
frontend_kolam/: package-lock.json  package.json
frontend_kolam/src/: App.jsx
frontend_kolam/src/components/: AiRecreate.css  AiRecreate.jsx  Recognize.css  analysis.jsx  home.jsx  navbar.jsx  recognize.jsx
monitoring/: prometheus.yml
scripts/: KNOWLEDGE.py  generate_sample_kolam.py  inference.py  init-db.sql  train_detection_model.py
src/: main.py
src/api/: auth.py  kolam.py  learning.py  users.py
src/core/: config.py  database.py  logging.py  security.py
src/schemas/: __init__.py
src/search/: client.py
src/services/: auth_service.py  kolam_service.py  learning_service.py  user_service.py
src/services/ai/: detection_service.py  generation_service.py  ollama_service.py
tests/: test_api_endpoints.py  test_kolam_detection.py  test_kolam_generation.py
